get the data of perticular id

--- a/try/views/login.html
+++ b/try/views/login.html
@@ -22,6 +22,8 @@
 	    
 	    <p>Output Message : {{msg}}</p>
 
+	    <p>Details of id : {{details}}</p>
+
 		<p>StatusCode: {{statusval}}</p>
 
 		<p>Status: {{statustext}}</p>
