task working done

--- a/try/views/login.html
+++ b/try/views/login.html
@@ -1,5 +1,5 @@
 <br>
-<div style="width: 50%;margin-left: 25%;">
+<div style="width: 50%;margin-left: 25%;"  ng-controller="myCtrl">
     <p class="h4 mb-4">Login</p>
     <!-- Name -->
     <input type="text" ng-model="phone"  class="form-control mb-4" placeholder="phone">
@@ -14,11 +14,11 @@
 	<br /> 
 	<br />
 	<br />
-	
 	<div>
+		<a href="#!profile/30254">profile</a>
 	    <p>return object : {{dataHere}}</p>
 	    <br>
-	    <p>return 0th userid : {{userid}}</p>
+	    <p>return 0 th userid : {{userid}}</p>
 	    
 	    <p>Output Message : {{msg}}</p>
 
