--- a/try/views/profile.html
+++ b/try/views/profile.html
@@ -1,9 +1,10 @@
 <center>
 <h3>Profile</h3>
 </center>
-<div ng-app="myApp" ng-controller="myCtrl">
+<div ng-controller="myCtrlProfile">
 	<div class="container" style="padding:5% 20%;">
-		
+			userid2 = {{userid2}}
+			
 		<div class="row">
 			<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 column1">
 				User Profile Pic : 
@@ -12,6 +13,7 @@
 				<img src="{{userprofilepic}}">
 			</div>
 		</div>
+
 		<div class="row">
 			<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 column1">
 				Name : 
