--- a/try/views/profile.html
+++ b/try/views/profile.html
@@ -2,15 +2,22 @@
 <h3>Profile</h3>
 </center>
 <div ng-controller="myCtrlProfile">
-	<div class="container" style="padding:5% 20%;">
-			userid2 = {{userid2}}
+	<div class="container" style="padding:5% 25%;">
+		<div class="row">
+			<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 column1">
+				userid2 : 
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 column2">
+				{{userid2}} 
+			</div>		
+		</div>	
 			
 		<div class="row">
 			<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 column1">
 				User Profile Pic : 
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 column2">
-				<img src="{{userprofilepic}}">
+				<img src="{{userprofilepic}}" style="height: 150px;width: auto;">
 			</div>
 		</div>
 
