--- a/states/views/partial-home.html
+++ b/states/views/partial-home.html
@@ -1,7 +1,7 @@
 <div class="jumbotron text-center">
     <h1>The Homey Page</h1>
     <p>This page demonstrates <span class="text-danger">nested</span> views.</p>  
-    <a href="a" download="ok.txt" id="alink">Check if download </a>
+    <a href="a" download="ok.txt" class="alink">Check if download </a>
     <button onclick="action()">action</button>
 <!--     <a ui-sref=".list" class="btn btn-primary">List</a>
     <a ui-sref=".paragraph" class="btn btn-danger">Paragraph</a> -->
