--- a/recording/views/record.html
+++ b/recording/views/record.html
@@ -1,23 +1,38 @@
-<h2>Training the system</h2>
+<div class="container">  
+  <h2>Training the system</h2>
     <br>
-
-    <div style="font-size: 25px;">Read the text</div>
+    <br>
     <div class="row">
-      <div id="msg" style="font-size: 25px;visibility: hidden;" class="col-sm-6 col-md-6 col-lg-6">
-        CAPTURE
+      <div class="col-sm-12 col-md-4 col-lg-4">
+        <button onclick="downloadSkip()">ALL SKIP</button>
       </div>
-      <div id="countDown" style="font-size: 20px;visibility: hidden;" class="col-sm-6 col-md-6 col-lg-6">
-        COUNT DOWN  
+      <div class="col-sm-12 col-md-4 col-lg-4">
+        <button onclick="downloadCapture()">ALL CAPTURE</button>        
+      </div>
+      <div class="col-sm-12 col-md-4 col-lg-4">
+        <button onclick="downloadStart()">ALL START</button>
       </div>
     </div>
-    
+    <br>
+    <br>
+    <center>
+      <div style="font-size: 25px;">Read the text</div>
+      <div class="row">
+        <div id="msg" style="font-size: 25px;visibility: hidden;" class="col-sm-6 col-md-6 col-lg-6">
+          CAPTURE
+        </div>
+        <div id="countDown" style="font-size: 20px;visibility: hidden;" class="col-sm-6 col-md-6 col-lg-6">
+          COUNT DOWN  
+        </div>
+      </div>
+  
     <div id="controls">
-  	 <button onclick="startRecordingFlag()">Record</button>
-<!--   	 <button id="pauseButton" disabled>Pause</button>
-  	 <button id="stopButton" disabled>Stop</button> -->
+     <button onclick="startRecordingNow()">Record</button>
+     <button onclick="stopRecordingNow()">STOP</button>
     </div>
     
-    <div id="formats">Format: start recording to see sample rate</div>
-  	<h3>Recordings</h3>
-  	<ol id="recordingsList"></ol>
-        
+      <div id="formats">Format: start recording to see sample rate</div>
+      <h3>Recordings</h3>
+      <ol id="recordingsList"></ol>
+    </center>
+</div>
